refactor cleanup codes

--- a/controller/config/samples/core_v1alpha1_component_plugin.yaml
+++ b/controller/config/samples/core_v1alpha1_component_plugin.yaml
@@ -84,6 +84,11 @@ spec:
   availableWorkloadType:
     - server
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: test
+---
 apiVersion: core.kapp.dev/v1alpha1
 kind: Application
 metadata:
