--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -3,11 +3,11 @@
 # It should be run by config/default
 resources:
 - bases/core.kapp.dev_applications.yaml
-- bases/core.kapp.dev_plugins.yaml
 - bases/core.kapp.dev_componenttemplates.yaml
 - bases/core.kapp.dev_dependencies.yaml
 - bases/core.kapp.dev_components.yaml
-- bases/core.kapp.dev_pluginbindings.yaml
+- bases/core.kapp.dev_componentplugins.yaml
+- bases/core.kapp.dev_componentpluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -16,9 +16,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_applications.yaml
 #- patches/webhook_in_componenttemplates.yaml
 #- patches/webhook_in_dependencies.yaml
-#- patches/webhook_in_plugins.yaml
 #- patches/webhook_in_components.yaml
-#- patches/webhook_in_pluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,9 +24,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_applications.yaml
 #- patches/cainjection_in_componenttemplates.yaml
 #- patches/cainjection_in_dependencies.yaml
-#- patches/cainjection_in_plugins.yaml
 #- patches/cainjection_in_components.yaml
-#- patches/cainjection_in_pluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
