--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - bases/core.kapp.dev_components.yaml
 - bases/core.kapp.dev_componentplugins.yaml
 - bases/core.kapp.dev_componentpluginbindings.yaml
+- bases/core.kapp.dev_applicationplugins.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -17,6 +18,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_componenttemplates.yaml
 #- patches/webhook_in_dependencies.yaml
 #- patches/webhook_in_components.yaml
+#- patches/webhook_in_applicationplugins.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -25,6 +27,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_componenttemplates.yaml
 #- patches/cainjection_in_dependencies.yaml
 #- patches/cainjection_in_components.yaml
+#- patches/cainjection_in_applicationplugins.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
