--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - bases/core.kapp.dev_componentplugins.yaml
 - bases/core.kapp.dev_componentpluginbindings.yaml
 - bases/core.kapp.dev_applicationplugins.yaml
+- bases/core.kapp.dev_applicationpluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -19,6 +20,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_dependencies.yaml
 #- patches/webhook_in_components.yaml
 #- patches/webhook_in_applicationplugins.yaml
+#- patches/webhook_in_applicationpluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -28,6 +30,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_dependencies.yaml
 #- patches/cainjection_in_components.yaml
 #- patches/cainjection_in_applicationplugins.yaml
+#- patches/cainjection_in_applicationpluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
