--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -1,15 +1,17 @@
+namespace: kapp-system
+
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
 - bases/core.kapp.dev_applications.yaml
-- bases/core.kapp.dev_componenttemplates.yaml
-- bases/core.kapp.dev_dependencies.yaml
+- bases/core.kapp.dev_applicationplugins.yaml
+- bases/core.kapp.dev_applicationpluginbindings.yaml
 - bases/core.kapp.dev_components.yaml
 - bases/core.kapp.dev_componentplugins.yaml
 - bases/core.kapp.dev_componentpluginbindings.yaml
-- bases/core.kapp.dev_applicationplugins.yaml
-- bases/core.kapp.dev_applicationpluginbindings.yaml
+#- bases/core.kapp.dev_componenttemplates.yaml
+#- bases/core.kapp.dev_dependencies.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
