--- a/controller/Makefile
+++ b/controller/Makefile
@@ -61,6 +61,15 @@ vet:
 generate: controller-gen
 	$(CONTROLLER_GEN) object:headerFile=./hack/boilerplate.go.txt paths="./..."
 
+# Build the docker image
+docker-build: test
+	docker build . -t ${IMG}
+
+# Push the docker image
+docker-push:
+	docker push ${IMG}
+
+
 # find or download controller-gen
 # download controller-gen if necessary
 controller-gen:
