--- a/controller/config/manager/manager.yaml
+++ b/controller/config/manager/manager.yaml
@@ -2,25 +2,25 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: controller
   name: system
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: controller-manager
+  name: controller
   namespace: system
   labels:
-    control-plane: controller-manager
+    control-plane: controller
 spec:
   selector:
     matchLabels:
-      control-plane: controller-manager
+      control-plane: controller
   replicas: 1
   template:
     metadata:
       labels:
-        control-plane: controller-manager
+        control-plane: controller
     spec:
       imagePullSecrets:
         - name: docker-registry-secret
@@ -30,6 +30,7 @@ spec:
         args:
         - --enable-leader-election
         image: kapp/controller:latest
+        imagePullPolicy: IfNotPresent
         name: manager
         env:
           - name: ENABLE_WEBHOOKS
