--- a/controller/config/prometheus/monitor.yaml
+++ b/controller/config/prometheus/monitor.yaml
@@ -4,12 +4,12 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    control-plane: controller-manager
-  name: controller-manager-metrics-monitor
+    control-plane: controller
+  name: controller-metrics-monitor
   namespace: system
 spec:
   endpoints:
     - path: /metrics
       port: https
   selector:
-    control-plane: controller-manager
+    control-plane: controller
