--- a/controller/config/rbac/role_binding.yaml
+++ b/controller/config/rbac/role_binding.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
+  name: controller-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-role
+  name: kapp-controller
 subjects:
 - kind: ServiceAccount
   name: default
@@ -14,7 +14,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding-view
+  name: controller-rolebinding-view
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
