update default sample namespace

--- a/operator/config/samples/install_v1alpha1_kappoperatorconfig.yaml
+++ b/operator/config/samples/install_v1alpha1_kappoperatorconfig.yaml
@@ -1,4 +1,5 @@
 apiVersion: install.kapp.dev/v1alpha1
 kind: KappOperatorConfig
 metadata:
+  namespace: kapp-operator
   name: kappoperatorconfig-sample
