--- a/operator/config/manager/manager.yaml
+++ b/operator/config/manager/manager.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   labels:
     control-plane: operator
-  name: system
+  name: operator
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -28,6 +28,7 @@ spec:
         args:
         - --enable-leader-election
         image: kapp/operator:latest
+        imagePullPolicy: IfNotPresent
         name: manager
         resources:
           limits:
