update operator samples

--- a/operator/config/samples/install_v1alpha1_kappoperatorconfig_ignore_kapp_controller.yaml
+++ b/operator/config/samples/install_v1alpha1_kappoperatorconfig_ignore_kapp_controller.yaml
@@ -8,3 +8,5 @@ kind: KappOperatorConfig
 metadata:
   namespace: kapp-operator
   name: kappoperatorconfig-sample
+spec:
+  skipKappControllerInstallation: true
