add skip kapp controller in operator spec

--- a/operator/config/crd/bases/install.kapp.dev_kappoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kapp.dev_kappoperatorconfigs.yaml
@@ -38,9 +38,8 @@ spec:
               type: boolean
             skipIstioInstallation:
               type: boolean
-          required:
-          - skipCertManagerInstallation
-          - skipIstioInstallation
+            skipKappControllerInstallation:
+              type: boolean
           type: object
         status:
           description: KappOperatorConfigStatus defines the observed state of KappOperatorConfig
