--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - bases/core.kapp.dev_componentpluginbindings.yaml
 #- bases/core.kapp.dev_componenttemplates.yaml
 #- bases/core.kapp.dev_dependencies.yaml
+- bases/core.kapp.dev_httpscertissuers.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -21,6 +22,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_components.yaml
 #- patches/webhook_in_applicationplugins.yaml
 #- patches/webhook_in_applicationpluginbindings.yaml
+#- patches/webhook_in_httpscertissuers.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -31,6 +33,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_components.yaml
 #- patches/cainjection_in_applicationplugins.yaml
 #- patches/cainjection_in_applicationpluginbindings.yaml
+#- patches/cainjection_in_httpscertissuers.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
