--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 #- bases/core.kapp.dev_componenttemplates.yaml
 #- bases/core.kapp.dev_dependencies.yaml
 - bases/core.kapp.dev_httpscertissuers.yaml
+- bases/core.kapp.dev_httpscerts.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -23,6 +24,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_applicationplugins.yaml
 #- patches/webhook_in_applicationpluginbindings.yaml
 #- patches/webhook_in_httpscertissuers.yaml
+#- patches/webhook_in_httpscerts.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -34,6 +36,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_applicationplugins.yaml
 #- patches/cainjection_in_applicationpluginbindings.yaml
 #- patches/cainjection_in_httpscertissuers.yaml
+#- patches/cainjection_in_httpscerts.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
