--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -183,6 +183,26 @@ rules:
   - patch
   - update
 - apiGroups:
+  - core.kapp.dev
+  resources:
+  - httpscerts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kapp.dev
+  resources:
+  - httpscerts/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - extensions
   resources:
   - daemonsets
