add test for HttpsCertIssuer & HttpsCert

--- a/controller/config/samples/core_v1alpha1_httpscertissuer.yaml
+++ b/controller/config/samples/core_v1alpha1_httpscertissuer.yaml
@@ -5,11 +5,11 @@ metadata:
 spec:
   caForTest: {}
 ---
-# apiVersion: core.kapp.dev/v1alpha1
-# kind: HttpsCertIssuer
-# metadata:
-#   name: httpscertissuer-acme-sample
-# spec:
-#   acmeCloudFlare:
-#     email: foo@bar.com
-#     apiKey: abcd
+apiVersion: core.kapp.dev/v1alpha1
+kind: HttpsCertIssuer
+metadata:
+  name: httpscertissuer-acme-sample
+spec:
+  acmeCloudFlare:
+    email: foo@bar.com
+    apiKey: abcd
